--- a/package.json
+++ b/package.json
@@ -12,14 +12,18 @@
   "dependencies": {
     "@mui/icons-material": "^5.15.11",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.9",
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
     "framer-motion": "^11.18.2",
     "gsap": "^3.12.5",
+    "moment": "^2.30.1",
     "mysql2": "^3.14.0",
     "nodemailer": "^6.10.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-datepicker": "^8.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^7.5.2",
@@ -34,7 +38,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.4",
+    "tailwindcss": "^4.1.6",
     "vite": "^6.3.2"
   }
 }
