--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@mui/icons-material": "^5.15.11",
@@ -17,6 +19,7 @@
     "express": "^4.21.2",
     "express-fileupload": "^1.5.1",
     "framer-motion": "^11.18.2",
+    "gh-pages": "^6.3.0",
     "gsap": "^3.12.5",
     "moment": "^2.30.1",
     "mysql2": "^3.14.0",
@@ -40,5 +43,6 @@
     "postcss": "^8.5.3",
     "tailwindcss": "^4.1.6",
     "vite": "^6.3.2"
-  }
+  },
+  "homepage": "https://CharNla.github.io/hrmanagement"
 }
