--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
     "tailwindcss": "^4.1.6",
     "vite": "^6.3.2"
   },
-  "homepage": "https://CharNla.github.io/hrmanagement"
+  "homepage": "https://charnla.github.io/hrmapex"
 }
