--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "@mui/icons-material": "^5.15.11",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^5.17.1",
+    "@mui/material": "^5.17.1",
     "axios": "^1.6.7",
     "chart.js": "^4.4.9",
     "cors": "^2.8.5",
