--- a/.env
+++ b/.env
@@ -1,6 +1,15 @@
 # Database Configuration
-DB_HOST=localhost
-DB_PORT=3001
-DB_USER=root
-DB_PASSWORD=your_password
-DB_NAME=hrmanagement
+
+#DB_HOST=localhost
+#DB_PORT=3001
+#DB_USER=root
+#DB_PASSWORD=your_password
+#DB_NAME=hrmanagement
+
+# Render Database Configuration
+DB_HOST=dpg-d0qjgrbipnbc73eebl00-a
+DB_PORT=5432
+DB_USER=hrms_db
+DB_PASSWORD=3Z39NgvNYuYZ69TYnVbQrOqedQm7FPw5
+DB_NAME=hrmanagement_tjfe
+
