--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@
 #DB_NAME=hrmanagement
 
 # Render Database Configuration
-DB_HOST=dpg-d0qjgrbipnbc73eebl00-a
+DB_HOST=dpg-d0qjgrbipnbc73eebl00-a.singapore-postgres.render.com
 DB_PORT=5432
 DB_USER=hrms_db
 DB_PASSWORD=3Z39NgvNYuYZ69TYnVbQrOqedQm7FPw5
