--- a/.env
+++ b/.env
@@ -13,3 +13,5 @@ DB_USER=hrms_db
 DB_PASSWORD=3Z39NgvNYuYZ69TYnVbQrOqedQm7FPw5
 DB_NAME=hrmanagement_tjfe
 
+VITE_API_URL=https://hr-backend-ao5o.onrender.com
+
