--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 # Database Configuration
 
-#DB_HOST=localhost
-#DB_PORT=3001
-#DB_USER=root
-#DB_PASSWORD=your_password
-#DB_NAME=hrmanagement
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USER=root
+DB_PASSWORD=
+DB_NAME=hrmanagement
 
 # Render Database Configuration
-DB_HOST=dpg-d0qjgrbipnbc73eebl00-a.singapore-postgres.render.com
-DB_PORT=5432
-DB_USER=hrms_db
-DB_PASSWORD=3Z39NgvNYuYZ69TYnVbQrOqedQm7FPw5
-DB_NAME=hrmanagement_tjfe
+#DB_HOST=dpg-d0qjgrbipnbc73eebl00-a.singapore-postgres.render.com
+#DB_PORT=5432
+#DB_USER=hrms_db
+#DB_PASSWORD=3Z39NgvNYuYZ69TYnVbQrOqedQm7FPw5
+#DB_NAME=hrmanagement_tjfe
 
-VITE_API_URL=https://hr-backend-ao5o.onrender.com
+#VITE_API_URL=https://hr-backend-ao5o.onrender.com
 
