--- a/package.json
+++ b/package.json
@@ -15,18 +15,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.17.1",
-    "@mui/material": "^5.17.1",
-    "axios": "^1.6.7",
+    "@mui/material": "^5.17.1",    "axios": "^1.6.7",
     "chart.js": "^4.4.9",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "express-fileupload": "^1.5.1",
     "framer-motion": "^11.18.2",
     "gh-pages": "^6.3.0",
     "gsap": "^3.12.5",
     "moment": "^2.30.1",
-    "mysql2": "^3.14.0",
-    "nodemailer": "^6.10.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-datepicker": "^8.3.0",
